webapp/src/main/webapp/skin/outlook.css
body {
  margin: 0;
  padding: 0;
}

.logoIcon* {
  display: inline-block;
}

.logoIcon80 {
  background-image: url("../images/exo-icon-80.png");
}

.logoIcon32 {
  background-image: url("../images/exo-icon-32.png");
}

#outlook-pane {
  min-height: 450px;
  position: relative;
}

#outlook-pane input {
  border-radius: 0px !important;
  box-shadow: none !important;
}

#outlook-pane .ms-NavBar-items {
  z-index: 10;
}

#outlook-brand-bar {
  position: absolute;
  bottom: 0px;
  width: 100%;
}

/* It is a workaround to do not show dropdown in right-upper corner in task pane of Outlook for Windows/Web */
@media ( min-width : 280px) {
  #outlook-pane .ms-Dropdown-items {
    top: auto;
    right: auto;
    bottom: auto;
    left: auto;
    max-width: 100%;
  }
  #outlook-pane .ms-Dropdown.ms-Dropdown--open .ms-Dropdown-items, #outlook-pane .ms-Dropdown.is-open .ms-Dropdown-items {
    position: absolute;
  }
}

/* Error banner (common) */
.error-message>.ms-MessageBanner {
  min-width: 290px;
  background-color: #fde7e9;
  color: #a80000;
}

.error-message button.ms-MessageBanner-close {
  margin-left: 25px;
  width: 25px;
}

.openPortalLink {
  margin-top: 20px;
}

/* Login/Welcome page */
.featureCheck {
  max-width: 25px;
}

.welcomeHeader {
  padding-left: 2px;
  padding-right: 2px;
  padding-top: 0px;
}

.welcomeIcon {
  margin-top: 15px;
}

.brandBar {
  margin: 6px 15px;
  padding: 0px;
  list-style: none;
}

.brandBar a, .brandBar a:visited {
  text-decoration: none;
}

.brand, .showLogout {
  display: inline-block;
}

.brandTitle {
  vertical-align: middle;
}

.showLogoutTitle, .brandTitle {
  color: #ffb900;
}

.showLogout {
  float: right;
  margin-top: 2px;
}

.showLogoutTitle {
  vertical-align: text-bottom;
}

.showLogoutIcon {
  float: right;
  margin-left: 3px;
  margin-top: 3px;
}

.firstFeatureRow {
  margin-top: 10px;
}

.menuRefresh, .editMessageText {
  margin-left: 3px;
}

.spacesDropdown {
  margin: 0px;
  padding: 0px;
  border: 0px;
}

#signInProgress {
  height: 450px;
  width: 100%;
}

.signingIn {
  width: 100%;
  position: relative;
  margin: auto;
  top: 25%;
}

.progressSpinner {
  width: 28px;
}

.progressSpinner > .ms-Spinner-circle {
  background-color: #ffb900;
}

/* Portlet */
#outlook-menu-container {
  padding-bottom: 50px;
}

#outlook-menu-container .ms-Grid {
  padding: 0px;
}

#outlook-menu-container .ms-Grid .ms-Grid-col {
  padding-left: 0px;
  padding-right: 0px;
}

/*
@media (min-width : 480px) {

}*/

span[disabled] {
  pointer-events: none;
}

.attachments .attachmentSize, .folders .lastModified {
  top: 5px !important;
}

.attachments .ms-ListItem, .folders .ms-ListItem {
  padding-top: 6px !important;
}

.ms-ListItem-primaryText {
  font-size: 14px !important;
  top: -2px !important;
}

.ms-ListItem.is-selected:before, .ms-ListItem.is-selected:hover:before {
  top: auto !important;
}

.ms-ListItem.is-selectable:hover:before {
  top: auto !important;
}

.ms-Grid-row .ms-TextField-field, .ms-Grid-row .ms-Dropdown {
  margin-bottom: 0px;
}

.savingSpaceTitle, .savedSpaceTitle {
  padding-bottom: 15px;
}

#savedAttachment .ms-Icon {
  padding-right: 10px;
}

#outlook-saveAttachment fieldset {
  min-inline-size: 95%;
}

#outlook-saveAttachment .ms-Grid-col {
  padding: 0px;
}

#outlook-saveAttachment {
  padding: 0px;
}

.selectableItem:hover {
  cursor: pointer;
  background-color: #eaeaea;
  outline: 1px solid transparent;
}

.pathInfo {
  font-size: 14px !important;
  display: block !important;
}

#path-info>.ms-ListItem {
  padding-left: 0px;
  padding-right: 0px;
}

.currentFolder .pathControls {
  top: 25px !important;
  right: 5px !important;
}

.text-centered {
  text-align: center;
}

.centered {
  min-width: 150px;
  max-width: 450px;
  margin: 0 auto;
}

div.form-buttons {
  marging-top: 10px;
}

.documentSelectorTab {
  padding-top: 0px;
}

.documentSelectorContent {
  min-height: 75px;
  max-height: 175px;
  border-width: 1px;
  border-style: solid;
  min-height: 125px;
  border-top-style: none;
  overflow: scroll;
}

.documentSearch .ms-SearchBox, .documentSearch .ms-SearchBox-field {
  width: 100%;
}

.documentSearch .ms-SearchBox {
  margin-bottom: 0px;
}

#documentSelector .pathControls, #attach .documents .pathControls {
  top: 5px !important;
  right: 5px !important;
}

#documentSelector .ms-ListItem-primaryText, #attach .documents .ms-ListItem-primaryText, #attached .documents .ms-ListItem-primaryText {
  padding-right: 0px;
}

.groupPath .currentFolder li, .documentExplorer .currentFolder li {
  padding: 0px !important;
}

.documentExplorer .currentFolder .ms-ListItem-primaryText {
  margin: 0px;
  top: 0px !important;
}

.documentExplorer .currentFolder .ms-ListItem-primaryText input {
  font-size: 12px !important;
  margin: 0px;
  border-width: 1px;
  border-style: solid;
  padding-left: 5px;
  padding-right: 40px;
  border-color: #71afe5;
}

.documentSelectorContent .ms-ListItem {
  padding-left: 25px;
  padding-top: 5px;
  padding-bottom: 0px;
}

/* This style adapted from .ms-ListItem.isFolder.is-selected */
.documentSelectorContent .ms-ListItem.isFolder:before, .documentSelectorContent .ms-ListItem.isFolder:hover:before {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  font-family: 'Office365Icons';
  font-style: normal;
  font-weight: normal;
  line-height: 1;
  speak: none;
  content: '\e014';
  font-size: 15px;
  color: #767676;
  position: absolute;
  top: 6px;
  left: 6px;
}

#attached .documents .ms-ListItem {
  padding-left: 7px;
  padding-right: 7px;
}

#attached .documents .ms-ListItem-primaryText i {
  margin-right: 5px;
}

#attached .documents .ms-ListItem-tertiaryText {
  margin-bottom: -4px;
  padding-right: initial;
  top: -5px;
  margin-bottom: 0px;
  font-size: 11px;
}

.messageText {
  height: 125px;
  overflow: hidden;
  padding: 0px;
  position: relative;
  z-index: 0;
}
/* ... */

